topcat: add new Activated subset
TopcatModels now have an automatically added RowSubset Activated,
which reports the currently activated row (if any).